# ext2p

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: bg.h  bgdescriptor.h  dir.h  disk.h  ext2.h  ext2dump.h  fault.h  inode.h  shell.h  superblock.h  util.h
src/: bg.c  bgdescriptor.c  dir.c  disk.c  ext2.c  ext2dump.c  inode.c  main.c  shell.c  superblock.c  util.c
